Fixed github-commits-per-day-last-30-days, as it always returned 1 commit due to dim_date query

--- a/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
@@ -39,7 +39,7 @@ query: |-
   where date_day < (current_date - interval '1 day')::date --end
   ) 
   select date_day "commits.date_day"
-  , count(*) "commits.commit_count"
+  , count(*) - 1 "commits.commit_count"
   from dim_date dd
   left join commits c on c.commit__author__date::date = dd.date_day
   GROUP BY date_day
