Added new dataset

--- a/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: Commits per Day for the Last 30 Days
 description: |-
   Number of commits per day for the last 30 Days.
