--- a/bundle/analyze/datasets/tap-github/github-total-commits-by-users-last-year.yml
+++ b/bundle/analyze/datasets/tap-github/github-total-commits-by-users-last-year.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: Total Commits per User for the Last Year
 description: |-
   Number of commits by each user for the last year.
