--- a/bundle/analyze/datasets/tap-github/github-commits-per-repo-by-month-last-12-months.yml
+++ b/bundle/analyze/datasets/tap-github/github-commits-per-repo-by-month-last-12-months.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: Commits Per Repo Last 12 Months
 description: |-
   Total commits per repo for the last 12 months
