Edit dataset tags

--- a/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
@@ -5,6 +5,7 @@ description: |-
   Number of commits per day for the last 30 Days.
 
   #github
+  #commits
 metadata: |-
   {
     "name": "commits",
