--- a/bundle/analyze/datasets/tap-github/github-total-commits-by-users-last-year.yml
+++ b/bundle/analyze/datasets/tap-github/github-total-commits-by-users-last-year.yml
@@ -5,6 +5,7 @@ description: |-
   Number of commits by each user for the last year.
 
   #github
+  #commits
 metadata: |-
   {
     "name": "commits",
