--- a/bundle/analyze/datasets/tap-github/github-total-commits-per-repo-last-year-to-date.yml
+++ b/bundle/analyze/datasets/tap-github/github-total-commits-per-repo-last-year-to-date.yml
@@ -5,6 +5,7 @@ description: |-
   The number of commits per repo for the last year to date
 
   #github
+  #commits
 metadata: |-
   {
     "name": "commits",
