--- a/bundle/analyze/datasets/tap-github/pr_dashboard/github-treemap-prs-closed-today.yml
+++ b/bundle/analyze/datasets/tap-github/pr_dashboard/github-treemap-prs-closed-today.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: PRs Closed Today
 questions: what are the total number of PRs closed today?
 description: |-
