--- a/bundle/analyze/datasets/tap-github/issue_dashboard/github-table-issues-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/issue_dashboard/github-table-issues-closed-last-30-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: Issues Closed Last 30 Days
 questions: what were the issues closed in the last 30 days?
 description: |-
