--- a/bundle/analyze/datasets/tap-github/issue_dashboard/github-treemap-issues-closed-last-7-days.yml
+++ b/bundle/analyze/datasets/tap-github/issue_dashboard/github-treemap-issues-closed-last-7-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: Issues Closed Last 7 Days
 questions: what are the total number of issues we closed in the last 7 days?
 description: |-
