--- a/bundle/analyze/datasets/tap-github/pr_dashboard/github-table-prs-created-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/pr_dashboard/github-table-prs-created-last-30-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: PRs Created Last 30 Days
 questions: what are the prs created in the last 30 days?
 description: |-
