--- a/bundle/analyze/datasets/tap-github/pr_dashboard/github-treemap-prs-created-last-7-days.yml
+++ b/bundle/analyze/datasets/tap-github/pr_dashboard/github-treemap-prs-created-last-7-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Github
+source: github
 title: PRs Created Last 7 Days
 questions: what are the total number of PRs created in the last 7 days?
 description: |-
