--- a/bundle/analyze/datasets/tap-github/github-export-all-open-issues.yml
+++ b/bundle/analyze/datasets/tap-github/github-export-all-open-issues.yml
@@ -7,6 +7,7 @@ description: |-
 
   All currently open github issues for your synced repositories.
 
+  #github
   #github-export
 metadata:
 visualisation:
