--- a/bundle/analyze/datasets/tap-github/pr_dashboard/github-treemap-prs-closed-today.yml
+++ b/bundle/analyze/datasets/tap-github/pr_dashboard/github-treemap-prs-closed-today.yml
@@ -9,7 +9,7 @@ description: |-
   #pr-dashboard
 metadata: |-
   {
-    "name": "fact_daily_stats",
+    "name": "github_fact_daily_stats",
     "related_table": {
         "columns": [
         ], 
@@ -26,6 +26,6 @@ visualisation: |-
   }
 query: |-
   SELECT
-    COALESCE(sum(closed_prs), 0) "fact_daily_stats.prs"
-  FROM fact_daily_stats
+    COALESCE(sum(closed_prs), 0) "github_fact_daily_stats.prs"
+  FROM github_fact_daily_stats
   WHERE date_day = current_date
