Added questions to every dataset, formatted exiting questions

--- a/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-commits-per-day-last-30-days.yml
@@ -1,6 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Commits per Day for the Last 30 Days
+questions: What were the number of commits per day for the last 30 days?
 description: |-
   Number of commits per day for the last 30 Days.
 
