--- a/bundle/analyze/datasets/tap-github/github-issues-created-and-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-issues-created-and-closed-last-30-days.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Issues Created and Closed Last 30 Days
-questions: how many issues have been created and closed during the last 30 days?
+questions: How many issues have been created and closed during the last 30 days?
 description: |-
   Issues created and closed for the last 30 days.
 
