--- a/bundle/analyze/datasets/tap-github/github-latest-10-prs.yml
+++ b/bundle/analyze/datasets/tap-github/github-latest-10-prs.yml
@@ -1,6 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Latest 10 Pull Requests
+questions: What are the latest 10 pull requests?
 description: |-
   Latest 10 pull requests.
 
