--- a/bundle/analyze/datasets/tap-github/github-table-issues-created-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-table-issues-created-last-30-days.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Issues Created Last 30 Days
-questions: what are the issues created in the last 30 days?
+questions: What are the issues created in the last 30 days?
 description: |-
   Issues created in the last 30 days.
 
