--- a/bundle/analyze/datasets/tap-github/github-prs-created-and-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-prs-created-and-closed-last-30-days.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: PRs Created and Closed Last 30 Days
-questions: how many prs have been created and closed during the last 30 days?
+questions: How many pull requests have been created and closed during the last 30 days?
 description: |-
   PRs created and closed for the last 30 days.
 
