--- a/bundle/analyze/datasets/tap-github/github-table-issues-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-table-issues-closed-last-30-days.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Issues Closed Last 30 Days
-questions: what were the issues closed in the last 30 days?
+questions: What were the issues closed in the last 30 days?
 description: |-
   Issues closed in the last 30 days.
 
