--- a/bundle/analyze/datasets/tap-github/github-table-prs-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-table-prs-closed-last-30-days.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: PRs Closed Last 30 Days
-questions: what were the prs closed in the last 30 days?
+questions: What were the prs closed in the last 30 days?
 description: |-
   PRs closed in the last 30 days.
 
