--- a/bundle/analyze/datasets/tap-github/github-total-commits-by-users-last-year.yml
+++ b/bundle/analyze/datasets/tap-github/github-total-commits-by-users-last-year.yml
@@ -1,6 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Total Commits per User for the Last Year
+questions: What is the number of commits per user for the last year?
 description: |-
   Number of commits by each user for the last year.
 
