--- a/bundle/analyze/datasets/tap-github/github-total-commits-per-repo-last-year-to-date.yml
+++ b/bundle/analyze/datasets/tap-github/github-total-commits-per-repo-last-year-to-date.yml
@@ -1,6 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Total Commits per Repo Last Year to Date
+questions: What were the number of commits per repo for the last year?
 description: |-
   The number of commits per repo for the last year to date
 
