--- a/bundle/analyze/datasets/tap-github/github-treemap-issues-closed-last-7-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-treemap-issues-closed-last-7-days.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Issues Closed Last 7 Days
-questions: what are the total number of issues we closed in the last 7 days?
+questions: What are the total number of issues we closed in the last 7 days?
 description: |-
   Total number of issues closed in the last 7 days.
 
