--- a/bundle/analyze/datasets/tap-github/github-treemap-issues-created-today.yml
+++ b/bundle/analyze/datasets/tap-github/github-treemap-issues-created-today.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: Issues Created Today
-questions: what are the total number of issues created today?
+questions: What are the total number of issues created today?
 description: |-
   Total number of issues created today.
 
