--- a/bundle/analyze/datasets/tap-github/github-treemap-prs-closed-today.yml
+++ b/bundle/analyze/datasets/tap-github/github-treemap-prs-closed-today.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: PRs Closed Today
-questions: what are the total number of PRs closed today?
+questions: What are the total number of PRs closed today?
 description: |-
   Total number of PRs closed today.
 
