--- a/bundle/analyze/datasets/tap-github/github-treemap-prs-created-today.yml
+++ b/bundle/analyze/datasets/tap-github/github-treemap-prs-created-today.yml
@@ -1,7 +1,7 @@
 version: datasets/v0.2
 source: github
 title: PRs Created Today
-questions: what are the total number of PRs created today?
+questions: What are the total number of PRs created today?
 description: |-
   Total number of PRs created today.
 
