--- a/rawdata/github-prs-created-and-closed-last-30-days.yml
+++ b/rawdata/github-prs-created-and-closed-last-30-days.yml
@@ -1,4 +1,4 @@
-github-prs-created-and-closed-last-30-days:
+github-prs-created-and-closed-last-30-days: |-
   [
     { "fds.date": "2023-01-18", "fds.created_prs": "3", "fds.closed_prs": "7" },
     { "fds.date": "2023-01-19", "fds.created_prs": "5", "fds.closed_prs": "4" },
@@ -10,7 +10,7 @@ github-prs-created-and-closed-last-30-days:
     {
       "fds.date": "2023-01-25",
       "fds.created_prs": "11",
-      "fds.closed_prs": "6",
+      "fds.closed_prs": "6"
     },
     { "fds.date": "2023-01-26", "fds.created_prs": "1", "fds.closed_prs": "2" },
     { "fds.date": "2023-01-27", "fds.created_prs": "1", "fds.closed_prs": "2" },
@@ -20,7 +20,7 @@ github-prs-created-and-closed-last-30-days:
     {
       "fds.date": "2023-01-31",
       "fds.created_prs": "20",
-      "fds.closed_prs": "19",
+      "fds.closed_prs": "19"
     },
     { "fds.date": "2023-02-01", "fds.created_prs": "5", "fds.closed_prs": "1" },
     { "fds.date": "2023-02-02", "fds.created_prs": "3", "fds.closed_prs": "6" },
@@ -32,12 +32,12 @@ github-prs-created-and-closed-last-30-days:
     {
       "fds.date": "2023-02-08",
       "fds.created_prs": "7",
-      "fds.closed_prs": "10",
+      "fds.closed_prs": "10"
     },
     {
       "fds.date": "2023-02-09",
       "fds.created_prs": "7",
-      "fds.closed_prs": "11",
+      "fds.closed_prs": "11"
     },
     { "fds.date": "2023-02-10", "fds.created_prs": "4", "fds.closed_prs": "5" },
     { "fds.date": "2023-02-11", "fds.created_prs": "0", "fds.closed_prs": "3" },
@@ -45,5 +45,5 @@ github-prs-created-and-closed-last-30-days:
     { "fds.date": "2023-02-13", "fds.created_prs": "2", "fds.closed_prs": "3" },
     { "fds.date": "2023-02-14", "fds.created_prs": "3", "fds.closed_prs": "1" },
     { "fds.date": "2023-02-15", "fds.created_prs": "8", "fds.closed_prs": "6" },
-    { "fds.date": "2023-02-16", "fds.created_prs": "3", "fds.closed_prs": "1" },
+    { "fds.date": "2023-02-16", "fds.created_prs": "3", "fds.closed_prs": "1" }
   ]
