--- a/bundle/analyze/datasets/tap-github/github-export-all-open-issues.yml
+++ b/bundle/analyze/datasets/tap-github/github-export-all-open-issues.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: Export - All Open Issues
 questions: What are my current open issues?
 description: |-
