--- a/bundle/analyze/datasets/tap-github/github-export-all-open-prs.yml
+++ b/bundle/analyze/datasets/tap-github/github-export-all-open-prs.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: Export - All Open PRs
 questions: What are my current open prs?
 description: |-
