--- a/bundle/analyze/datasets/tap-github/github-latest-10-issues.yml
+++ b/bundle/analyze/datasets/tap-github/github-latest-10-issues.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: Latest 10 Issues
 questions: What are the latest 10 issues?
 description: |-
