--- a/bundle/analyze/datasets/tap-github/github-prs-created-and-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-prs-created-and-closed-last-30-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: PRs Created and Closed Last 30 Days
 questions: How many pull requests have been created and closed during the last 30 days?
 description: |-
