--- a/bundle/analyze/datasets/tap-github/github-table-prs-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-table-prs-closed-last-30-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: PRs Closed Last 30 Days
 questions: What were the prs closed in the last 30 days?
 description: |-
