--- a/bundle/analyze/datasets/tap-github/github-treemap-issues-closed-last-7-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-treemap-issues-closed-last-7-days.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: Issues Closed Last 7 Days
 questions: What are the total number of issues we closed in the last 7 days?
 description: |-
