--- a/bundle/analyze/datasets/tap-github/github-treemap-issues-created-today.yml
+++ b/bundle/analyze/datasets/tap-github/github-treemap-issues-created-today.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: Issues Created Today
 questions: What are the total number of issues created today?
 description: |-
