--- a/bundle/analyze/datasets/tap-github/github-treemap-prs-closed-today.yml
+++ b/bundle/analyze/datasets/tap-github/github-treemap-prs-closed-today.yml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: github
+source: tap-github
 title: PRs Closed Today
 questions: What are the total number of PRs closed today?
 description: |-
