--- a/bundle/analyze/datasets/tap-github/github-export-all-open-prs.yml
+++ b/bundle/analyze/datasets/tap-github/github-export-all-open-prs.yml
@@ -18,7 +18,7 @@ query: |-
     , title "Issue Title"
     , repo "Repository"
     , assignees "Assignees"
-    , url "URL"
+    , html_url "URL"
   FROM issues i
   WHERE TYPE = 'pull_request'
   AND state != 'closed'
