--- a/bundle/analyze/datasets/tap-github/github-table-prs-created-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-table-prs-created-last-30-days.yml
@@ -30,7 +30,7 @@ query: |-
     , user__login "prs.user_login"
     , repo "prs.repo"
     , state "prs.state"
-    , url "prs.url"
+    , html_url "prs.url"
     , assignees "prs.assignees"
   FROM issues as prs
   WHERE created_at::date >= current_date - INTERVAL '30 day'
