Updated exisiting datasets with links to other relevant datasets

--- a/bundle/analyze/datasets/tap-github/github-latest-10-issues.yml
+++ b/bundle/analyze/datasets/tap-github/github-latest-10-issues.yml
@@ -5,6 +5,8 @@ questions: What are the latest 10 issues?
 description: |-
   Latest 10 issues.
 
+  [GitHub Issues Export - Data On All Issues](github-export-all-issues)
+
   #github
   #latest
 metadata: |-
