--- a/bundle/analyze/datasets/tap-github/github-latest-10-prs.yml
+++ b/bundle/analyze/datasets/tap-github/github-latest-10-prs.yml
@@ -5,6 +5,8 @@ questions: What are the latest 10 pull requests?
 description: |-
   Latest 10 pull requests.
 
+  [GitHub PRs Export - Data On All PRs](github-export-all-prs)
+
   #github
   #latest
 metadata: |-
