--- a/bundle/analyze/datasets/tap-github/github-table-issues-created-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-table-issues-created-last-30-days.yml
@@ -5,6 +5,8 @@ questions: What are the issues created in the last 30 days?
 description: |-
   Issues created in the last 30 days.
 
+  [GitHub Issues Export - Data On All Issues](github-export-all-issues)
+
   #github
   #issue-dashboard
 metadata: |-
