--- a/bundle/analyze/datasets/tap-github/github-table-prs-closed-last-30-days.yml
+++ b/bundle/analyze/datasets/tap-github/github-table-prs-closed-last-30-days.yml
@@ -5,6 +5,8 @@ questions: What were the prs closed in the last 30 days?
 description: |-
   PRs closed in the last 30 days.
 
+  [GitHub PRs Export - Data On All PRs](github-export-all-prs)
+
   #github
   #pr-dashboard
 metadata: |-
