Fixed incorrect label on axis of github-commits-per-repo-by-month-last-12-months

--- a/bundle/analyze/datasets/tap-github/github-commits-per-repo-by-month-last-12-months.yml
+++ b/bundle/analyze/datasets/tap-github/github-commits-per-repo-by-month-last-12-months.yml
@@ -34,7 +34,7 @@ visualisation: |-
             "stacked": true,
             "title": {
                   "display": true,
-                  "text": "Spend"
+                  "text": "Commits"
             }
           }
         }
